Made parsing test triggers also on pull-request

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,6 +1,6 @@
 name: Automatic-City-and-State-name-changer
 
-on: [push]
+on: [ push,pull_request ]
 
 jobs:
   build:
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ 3.8]
+        python-version: [ 3.8 ]
 
     steps:
       - uses: actions/checkout@v2
