--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+googletrans==4.0.0rc1
+numpy==1.19.4
 pandas==1.3.4
 pinyin==0.4.0
+PyYAML==6.0
 tqdm==4.56.0
 transliterate==1.10.2
+Unidecode==1.3.2
 Wikipedia_API==0.5.4
