--- a/provinces.yaml
+++ b/provinces.yaml
@@ -11239,7 +11239,7 @@
   chinese: Palaobei
   czech: Severni Palau
   danish: North Palau
-  dutch: Noord-palau
+  dutch: Noord-Palau
   english: North Palau
   estonian: Pohja-palau
   finnish: North Palau
