More Hindi, Norwegian, Danish state translations (423). Changelog in description
============ CITIES =================

================= French =================
Lubumbashi -> Élisabethville
================= German =================
Lubumbashi -> Elisabethstadt
Kinshasa -> Leopoldstadt
================= Polish =================
Sverdlovsk -> Swierdłowsk
================= Romanian =================
============ STATES =================
================= Hindi =================
nan -> Nevaada
nan -> Yoota
nan -> Vyoming
nan -> Koloraado
nan -> Kaansaas
nan -> Nebraaska
nan -> Aurigan
nan -> Voshingatan
nan -> Idaaho
nan -> Montaana
nan -> North Dakota
nan -> Sauth Dakota
nan -> Minesota
nan -> Aayova
nan -> Mishigan
nan -> Viskonsin
nan -> Ilinoy
nan -> Indiyaana
nan -> Sintisin
nan -> Parm
nan -> Izaask
nan -> Keerof
nan -> Phredarik Engels
nan -> Akhtubinsk
nan -> Tyumain
nan -> Taashakand
nan -> Gureev
nan -> Yooraal Parvat
nan -> Vlaadivostok
nan -> Khaabaarovsk
nan -> Sistaan
nan -> Isfahaan
nan -> Faars
nan -> Khoozastaan
nan -> Karmaan
nan -> Heraat
nan -> Khoraasaan
nan -> Hamaadaan
nan -> Semanaan
nan -> Geelaan Praant
nan -> Kurdistaan
nan -> Shreelanka
nan -> Maduree
nan -> Chennee
nan -> Maisoor
nan -> Odisha
nan -> Haidaraabaad
nan -> Gujaraat
nan -> Mumbee
nan -> Poorvee Bangaal
nan -> Pashchim Bangaal
nan -> Asam
nan -> Arunaachal Pradesh
nan -> Bihaar
nan -> Jabalapur
nan -> Indaur
nan -> Lakhanoo
nan -> Dillee
nan -> Panjaab Kshetr
nan -> Kashmeer
nan -> Peshaavar
nan -> Sindh
nan -> Avaraan Jila
nan -> Kveta
nan -> Kaahira
nan -> Sikandariya
nan -> Taaraaboolas
nan -> Agila
nan -> Benagaazee
nan -> Darn
nan -> Seenaee Praayadveep
nan -> Filisteen
nan -> Jordan
nan -> Asavaan
nan -> Poorvee Registaan
nan -> Tooniseeya
nan -> Aljeeyars
nan -> Chonstantinai
nan -> Kaisablanka
nan -> Maraakesh
nan -> Alaaska
nan -> Nova Skoshya
nan -> Nyoo Bransvik
nan -> Kyoobek
nan -> Mainitoba
nan -> Sent Lorens
nan -> Sipaahee
nan -> Albarta
nan -> Uttaree Kanaada


--- a/provinces.yaml
+++ b/provinces.yaml
@@ -299,8 +299,8 @@
   english: Elisabethville
   estonian: Lubumbashi
   finnish: Lubumbashi
-  french: Lubumbashi
-  german: Lubumbashi
+  french: Élisabethville
+  german: Elisabethstadt
   greek: Loyboybasi
   hindi: Lubumbaashee
   hungarian: Lubumbashi
@@ -5333,7 +5333,7 @@
   latvian: Sverdlovsk
   lithuanian: Sverdlovsk
   norwegian: Sverdlovsk
-  polish: Sverdlovsk
+  polish: Swierdłowsk
   portuguese: Sverdlovsk
   romanian: Sverdlovsk
   russian: Sverdlovsk
@@ -13260,7 +13260,7 @@
   estonian: Kinshasa
   finnish: Kinshasa
   french: Kinshasa
-  german: Kinshasa
+  german: Leopoldstadt
   greek: Kinsasa
   hindi: Keenshaasa
   hungarian: Kinshasa
