East Slovakia fixed (SK-NUTS)

--- a/states.yaml
+++ b/states.yaml
@@ -2171,24 +2171,24 @@
 - ID: 71
   albanian: Eastern Slovakia
   arab: Eastern Slovakia
-  belarusian: 'Hajki: sk'
-  bulgarian: Nuts:sk
+  belarusian: Vialikdzień Slavakija
+  bulgarian: Velikden Slovakiya
   chinese: Dongsiluofake
-  czech: SK-NUTS
+  czech: Velikonoční Slovensko
   danish: Øst Slovakiet
   dutch: Oostelijk Slovakije
   english: Eastern Slovakia
   estonian: Eastern Slovakia
-  finnish: Slovakian NUTS-aluejako
+  finnish: Pääsiäinen Slovakia
   french: Eastern Slovakia
   german: Ostslowakei
   greek: Eastern Slovakia
   hindi: Poorvee Slovaakiya
   hungarian: Eastern Slovakia
   italian: Slovacchia Orientale
-  japanese: 'Nattsu: sk.'
+  japanese: Isutasurobakia
   latvian: Eastern Slovakia
-  lithuanian: NUTS:SK
+  lithuanian: Velykų Slovakija
   norwegian: Øst Slovakia
   polish: Wschodnia Słowacja
   portuguese: Eastern Slovakia
@@ -2196,8 +2196,8 @@
   russian: Eastern Slovakia
   spanish: Eastern Slovakia
   swedish: Eastern Slovakia
-  turkish: Slovakya'nın İBBS'si
-  ukrainian: Nuts slovachchyny
+  turkish: Paskalya Slovakya
+  ukrainian: Velykdenʹ Slovachchyny
   yugoslav: Eastern Slovakia
 - ID: 72
   albanian: Zaolzie
