Japanese fix taiwan

--- a/states.yaml
+++ b/states.yaml
@@ -16229,7 +16229,7 @@
   hindi: Cheenee Ganaraajy
   hungarian: Kínai Köztársaság
   italian: Formosa
-  japanese: Chūkaminkoku
+  japanese: Taiwan
   latvian: Ķinas Republika
   lithuanian: Taivanas
   norwegian: Taiwan
