Improved Jugoslavian translation for Istanbul

--- a/provinces.yaml
+++ b/provinces.yaml
@@ -23133,7 +23133,7 @@
   swedish: Istanbul
   turkish: İstanbul
   ukrainian: Stambul
-  yugoslav: Istanbul
+  yugoslav: Tsarigrad
 - Province id: 9840
   StateID: 166
   albanian: Huesca
